--- a/AGV.ui
+++ b/AGV.ui
@@ -3209,9 +3209,19 @@ QPushButton::hover
                  </item>
                  <item row="5" column="2">
                   <widget class="QLineEdit" name="lineEditAyarlarAGV2icon">
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                     <weight>75</weight>
+                     <bold>true</bold>
+                    </font>
+                   </property>
                    <property name="styleSheet">
                     <string notr="true">	border: 3px solid;
 	border-radius: 10px;</string>
+                   </property>
+                   <property name="text">
+                    <string>                          </string>
                    </property>
                    <property name="frame">
                     <bool>true</bool>
